# nss

./: Aggregator.cpp  Aggregator.h  CMakeLists.txt  README.md  main.cpp
Convection/: Convection.cpp  Convection.h  ConvectionPars.cpp  ConvectionPars.h
Helpers/: ColorForConsol.h  GetFromFile.h  LinearEquation.cpp  LinearEquation.h  MatrixOperations.cpp  MatrixOperations.h  StringAndNumber.h
Location/: Location.cpp  Location.h
Plot/: Plot.cpp  Plot.h  Plot1D.cpp  Plot1D.h  Plot2D.cpp  Plot2D.h  PlotFuncPar.cpp  PlotFuncPar.h
States/: FuncPar.cpp  FuncPar.h  Grid.cpp  Grid.h
inOut/: data.txt  fP.txt  gridPars.txt  satIni.txt
